# Music-Source-Separation-Training

./: .gitignore  LICENSE  README.md  dataset.py  ensemble.py  example.db  githack.sh  gui-wx.py  inference.py  metrics.py  moises_to_musdb.py  my_job_error.err  my_job_error_htdemucs.err  my_job_error_mdx23c.err  my_job_output.out  my_job_output_htdemucs.out  my_job_output_mdx23c.out  pyproject.toml  requirements.txt  run_bs_mamba2_training.sh  run_bs_roformer_training.sh  run_htdemucs_training.sh  run_mdx23c_training.sh  run_metrics.py  run_models.py  run_models.sh  run_pipeline.py  run_pipeline.sh  run_scnet_training.sh  run_training.py  run_training_mac.py  run_training_pipeline.sh  run_validation.py  slurm-47755440.out  slurm-48359792.out  slurm-48803442.out  slurm-48804347.out  slurm-48808901.out  slurm-48813108.out  tester.out  (+8 more)
configs/: config-dttnet-vocals.yaml  config_apollo.yaml  config_dnr_bandit_bsrnn_multi_mus64.yaml  config_dnr_bandit_v2_mus64.yaml  config_drumsep.yaml  config_htdemucs_6stems.yaml  config_htdemucs_musdb18.yaml  config_htdemucs_vocals.yaml  config_mdx23c_musdb18.yaml  config_mdx23c_vocals.yaml  config_mel_band_roformer_musdb18.yaml  config_musdb18_bs_mamba2.yaml  config_musdb18_bs_roformer.yaml  config_musdb18_bs_roformer_with_lora.yaml  config_musdb18_demucs3_mmi.yaml  config_musdb18_htdemucs.yaml  config_musdb18_htdemucs_cpu.yaml  config_musdb18_mdx23c.yaml  config_musdb18_mdx23c_stht.yaml  config_musdb18_mel_band_conformer.yaml  config_musdb18_mel_band_conformer_all_stems.yaml  config_musdb18_mel_band_roformer.yaml  config_musdb18_mel_band_roformer_all_stems.yaml  config_musdb18_mel_band_roformer_sage.yaml  config_musdb18_moises_light.yaml  config_musdb18_scnet.yaml  config_musdb18_scnet_large.yaml  config_musdb18_scnet_tran.yaml  config_musdb18_segm_models.yaml  config_musdb18_torchseg.yaml  config_musdb_conformers.yaml  config_music_4hod.yaml  config_music_8hod.yaml  config_music_del2.yaml  config_music_del4.yaml  config_saxophone_conformers.yaml  config_segm_models_vocals.yaml  config_sslam.yaml  config_vocals_bandit_bsrnn_multi_mus64.yaml  config_vocals_bs_conformer.yaml  (+13 more)
custom_updates/: CustomCrossTransformerEncoder.py  CustomCrossTransformerEncoderLayer.py  CustomMultiheadAttention.py  CustomMyTransformerEncoderLayer.py
docs/: LoRA.md  augmentations.md  bs_roformer_info.md  changes.md  dataset_types.md  ensemble.md  gui.md  mel_roformer_experiments.md  pretrained_models.md  sslam.md  test.md
gui/: gui-wx.py
models/: conformer_model.py  demucs4ht.py  ex_bi_mamba2.py  mdx23c_tfc_tdf_v3.py  mdx23c_tfc_tdf_v3_with_STHT.py  mel_band_conformer.py  segm_models.py  torchseg.py  torchseg_models.py  ts_bs_mamba2.py  upernet_swin_transformers.py
one_off_scripts/: extract_stems_into_folders.py  get_musdb_sample_dataset.py  organize_separated_files.py  organize_stems.py  rename_accompaniment_to_other.py  reorganize_dataset_into_subsets.py
scripts/: do_metadata.py  moises_to_musdb.py  prepare_weights_for_inference.py  print_list_of_model_layers.py  redact_config.py  stream.py  trim.py  valid_to_inference.py  voice_denoiser.py  watch_all_metrics.py
slurm_logs/: slurm-50467884.out  slurm-50469967.out  slurm-50622370.out  slurm-50623715.out  slurm-50626519.out  slurm-50628725.out  slurm-50855291.out  slurm-50862974.out  slurm-50875565.out  slurm-50934964.out  slurm-50954361.out  slurm-50992048.out  slurm-50996248.out  slurm-50996252.out  slurm-50996289.out  slurm-51000924.out  slurm-51010215.out  slurm-51010338.out  slurm-51010486.out  slurm-51066668.out  slurm-51085744.out  slurm-51624640.out  slurm-51635488.out  slurm-51649528.out  (+1 more)
(+195 files in other folders)
